third_party/llvm-project/clang/test/Frontend/verify2.h
#if 0
// expected-error {{should be ignored}}
#endif

#error header
